# waifuset

./: README.md  README_SIMPLE.md  environment_setup.md  pyproject.toml  requirements-uv.txt  run.bat  run.sh  test.txt  uv_setup.md  使用说明.txt
