[project]
name = "waifuset"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "gradio==5.23.2",
    "imagehash>=4.3.2",
    "numpy>=2.3.2",
    "opencv-contrib-python>=4.11.0.86",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
